# helloworld

./: .env.example  .gitignore  AA_LEGAL_AI_AUTOMATION_GUIDE.html  AA_LEGAL_BUSINESS_OPERATIONS.html  CARTON_BANK_BUSINESS_PLAN.md  CLAUDE.md  Pinnacle Wellness.html  README.md  SETUP.md  chat.js  components.js  create-security-auditor-agent.sh  data.js  index.html  package-lock.json  package.json  pages-main.js  pages-secondary.js  style-guide.md  styles.css  topics-backlog.md  troan-digital.html  tsconfig.json
.claude/: settings.json
commands/: log  research  trade
docs/: buyers-outreach-list.md  deployment-guide.md  research-report.md
internal/: tiktok-playbook.html
logs/: report_TRO-2026-001.md
memory/: portfolio.md  research_log.md  strategy.md  trade_log.md  weekly_review.md
orchestrator/: .env.example  package-lock.json  package.json  tsconfig.json
pentest-demo/: package-lock.json  (+3 more)
solutions/01-fraud-detection-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
solutions/01-fraud-detection-api/app/: features.py  main.py  models.py  scoring.py  storage.py
solutions/01-fraud-detection-api/examples/: sample_requests.http
solutions/01-fraud-detection-api/tests/: test_scoring.py
solutions/03-farmer-ai-agronomist/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
solutions/03-farmer-ai-agronomist/app/: knowledge.py  languages.py  llm.py  main.py  models.py  ussd.py
solutions/03-farmer-ai-agronomist/examples/: sample_requests.http
solutions/03-farmer-ai-agronomist/tests/: test_api.py  test_languages.py  test_ussd.py
(+169 files in other folders)
