[project]
name = "naija-fraud-api"
version = "0.1.0"
description = "Real-time AI fraud-scoring API for Nigerian banks and fintechs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
